# kernel

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml  x86_64-kernel.json
.cargo/: config.toml
learning/: 00-setup.md  01-freestanding-binary.md  02-vga-text-output.md  03-gdt-and-tss.md  04-cpu-exceptions-idt.md  05-hardware-interrupts-keyboard.md  06-the-shell-repl.md  07-commands.md  08-build-and-run.md  README.md
src/: gdt.rs  interrupts.rs  main.rs  shell.rs  vga_buffer.rs
